# ModernCpp2018

./: README.md
homework_1/: README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: guessing_game  guessing_game.cpp
homework_2/: CMakeLists.txt  README.md
homework_2/data/: lena.ascii.compressed.pgm
homework_2/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
homework_2/tests/: CMakeLists.txt  test_img.cpp
homework_3/: README.md
homework_3/data/: pbmlib.ascii.ScaledDown.ppm  test.ascii.ppm
homework_3/src/: CMakeLists.txt  main.cpp
homework_3/src/igg_image/: image.cpp
homework_3/tests/: CMakeLists.txt  test_init.cpp  test_resize.cpp
homework_4/digit_counter/: CMakeLists.txt
homework_4/digit_counter/src/: CMakeLists.txt
homework_4/digit_counter/src/digit_counting/: CMakeLists.txt  digit_counting.cpp  digit_counting.h
homework_4/digit_counter/tests/: CMakeLists.txt  digit_counting_test.cpp
homework_4/igg_image/data/: pbmlib.ascii.ScaledUp.ppm
homework_4/igg_image/igg_image/: CMakeLists.txt  image.h
homework_4/igg_image/igg_image/io_strategies/: CMakeLists.txt  png_strategy.cpp  ppm_strategy.cpp  strategy.h
homework_4/igg_image/src/: main.cpp
homework_4/igg_image/src/igg_image/: image.cpp  image.h
homework_4/igg_image/src/igg_image/io_strategies/: ppm_strategy.h
homework_4/igg_image/tests/: CMakeLists.txt  test_init.cpp  test_resize.cpp
homework_4/stack_limit/: stack_limit  stack_limit.cpp
